--- a/html-css/module_06/index.html
+++ b/html-css/module_06/index.html
@@ -106,32 +106,30 @@
                 Ea rerum accusantium eius? Fugiat aspernatur veniam molestiae magni magnam,
                 ratione pariatur?</p>
             </div>
-        </section>
-        <section class="container">
             <ul class="team_list">
                 <li>
                     <article class="team_items">
                         <div class="team_modal">
                             <ul class="team_m_list">
                                 <li class="team_m_item">
-                                    <button class="team_m_btn" style="font-size: 20px">
+                                    <a class="team_m_btn" style="font-size: 20px">
                                         <i class="fab fa-facebook-f"></i>
-                                    </button>
+                                    </a>
                                 </li>
                                 <li class="team_m_item">
-                                    <button class="team_m_btn" style="font-size: 20px">
+                                    <a class="team_m_btn" style="font-size: 20px">
                                         <i class="fab fa-twitter"></i>
-                                    </button>
+                                    </a>
                                 </li>
                                 <li class="team_m_item">
-                                    <button class="team_m_btn" style="font-size: 20px">
+                                    <a class="team_m_btn" style="font-size: 20px">
                                         <i class="fab fa-pinterest-p"></i>
-                                    </button>
+                                    </a>
                                 </li>
                                 <li class="team_m_item">
-                                    <button class="team_m_btn" style="font-size: 20px">
+                                    <a class="team_m_btn" style="font-size: 20px">
                                         <i class="fab fa-instagram"></i>
-                                    </button>
+                                    </a>
                                 </li>
                             </ul>
                         </div>
