--- a/html-css/module_06/index.html
+++ b/html-css/module_06/index.html
@@ -38,9 +38,9 @@
             <ul class="card_list">
                 <li>
                     <article class="card_item">
-                        <img src="./img/card/1.png" alt="1.jpg" class="card_img">
+                        <div class="card_icon" style="background-image: url(./img/card/1.png)"></div>
                         <div class="card_container">
-                            <h4 class="card_title">photograhy</h4>
+                            <h4 class="card_title" src-img="../img/card/1.png">photograhy</h4>
                             <p class="card_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
                                 Quod quia perferendis voluptatem!</p>
                         </div>
@@ -48,7 +48,7 @@
                 </li>
                 <li>
                     <article class="card_item">
-                        <img src="./img/card/2.png" alt="2.jpg" class="card_img">
+                        <div class="card_icon" style="background-image: url(./img/card/2.png)"></div>
                         <div class="card_container">
                             <h4 class="card_title">web disign</h4>
                             <p class="card_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
@@ -58,7 +58,7 @@
                 </li>
                 <li>
                     <article class="card_item">
-                        <img src="./img/card/3.png" alt="3.jpg" class="card_img">
+                        <div class="card_icon" style="background-image: url(./img/card/3.png)"></div>
                         <div class="card_container">
                             <h4 class="card_title">creativity</h4>
                             <p class="card_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
@@ -68,7 +68,7 @@
                 </li>
                 <li>
                     <article class="card_item">
-                        <img src="./img/card/4.png" alt="4.jpg" class="card_img">
+                        <div class="card_icon" style="background-image: url(./img/card/4.png)"></div>
                         <div class="card_container">
                             <h4 class="card_title">seo</h4>
                             <p class="card_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
@@ -78,7 +78,7 @@
                 </li>
                 <li>
                     <article class="card_item">
-                        <img src="./img/card/5.png" alt="5.jpg" class="card_img">
+                        <div class="card_icon" style="background-image: url(./img/card/5.png)"></div>
                         <div class="card_container">
                             <h4 class="card_title">css/html</h4>
                             <p class="card_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
@@ -88,7 +88,7 @@
                 </li>
                 <li>
                     <article class="card_item">
-                        <img src="./img/card/6.png" alt="6.jpg" class="card_img">
+                        <div class="card_icon" style="background-image: url(./img/card/6.png)"></div>
                         <div class="card_container">
                             <h4 class="card_title">digital</h4>
                             <p class="card_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
