module 7 first commit

--- a/html-css/module_07/index.html
+++ b/html-css/module_07/index.html
@@ -5,7 +5,10 @@
     <title>Модуль 7</title>
     <link rel="stylesheet" href="./style/main.css">
 </head>
-<body>
-    Hello world
-</body>
-</html>
+    <body>
+       <p class="test">Golden</p> 
+       <p class="test1">Hello world</p> 
+       <p class="test2">Hello world</p> 
+       <p class="test3">Hello world</p> 
+    </body>
+</html> 
