--- a/html-css/module_07/index.html
+++ b/html-css/module_07/index.html
@@ -35,32 +35,38 @@
                 <h3 class="headline_second">Proin iaculis purus consequat sem cure.</h3>
             </div>
             <ul class="card_list">
-                <li class="card_item">
-                    <div class="card_icon" style="background-image: url(./img/icon/1.jpg)"></div>
-                    <div class="card_text">
-                        <h4>E-Commerce</h4>
-                        <p>Proin iaculis purus consequat sem cure 
-                            digni ssim. Donec porttitora entum suscipit 
-                            aenean rhoncus posuere odio in tincidunt.</p>
-                    </div>
+                <li>
+                    <article class="card_item">
+                        <div class="card_icon" style="background-image: url(./img/icon/1.jpg)"></div>
+                        <div class="card_text">
+                            <h4>E-Commerce</h4>
+                            <p>Proin iaculis purus consequat sem cure 
+                                digni ssim. Donec porttitora entum suscipit 
+                                aenean rhoncus posuere odio in tincidunt.</p>
+                        </div>
+                    </article>
                 </li>
-                <li class="card_item">
-                    <div class="card_icon" style="background-image: url(./img/icon/2.jpg)"></div>
-                    <div class="card_text">
-                        <h4>Responsive Web</h4>
-                        <p>Proin iaculis purus consequat sem cure 
-                            digni ssim. Donec porttitora entum suscipit 
-                            aenean rhoncus posuere odio in tincidunt.</p>
-                    </div>
+                <li>
+                    <article class="card_item">
+                        <div class="card_icon" style="background-image: url(./img/icon/2.jpg)"></div>
+                        <div class="card_text">
+                            <h4>Responsive Web</h4>
+                            <p>Proin iaculis purus consequat sem cure 
+                                digni ssim. Donec porttitora entum suscipit 
+                                aenean rhoncus posuere odio in tincidunt.</p>
+                        </div>
+                    </article>
                 </li>
-                <li class="card_item">
-                    <div class="card_icon" style="background-image: url(./img/icon/3.jpg)"></div>
-                    <div class="card_text">
-                        <h4>Web Security</h4>
-                        <p>Proin iaculis purus consequat sem cure 
-                            digni ssim. Donec porttitora entum suscipit 
-                            aenean rhoncus posuere odio in tincidunt.</p>
-                    </div>
+                <li>
+                    <article class="card_item">
+                        <div class="card_icon" style="background-image: url(./img/icon/3.jpg)"></div>
+                        <div class="card_text">
+                            <h4>Web Security</h4>
+                            <p>Proin iaculis purus consequat sem cure 
+                                digni ssim. Donec porttitora entum suscipit 
+                                aenean rhoncus posuere odio in tincidunt.</p>
+                        </div>
+                    </article>
                 </li>
             </ul>
            </section>
