--- a/html-css/module_07/index.html
+++ b/html-css/module_07/index.html
@@ -37,8 +37,8 @@
             <ul class="card_list">
                 <li>
                     <article class="card_item">
-                        <div class="card_icon" style="background-image: url(./img/icon/1.jpg)"></div>
-                        <div class="card_text">
+                        <!-- <div class="card_icon" style="background-image: url(./img/icon/1.jpg)"></div> -->
+                        <div class="card_text icon1">
                             <h4>E-Commerce</h4>
                             <p>Proin iaculis purus consequat sem cure 
                                 digni ssim. Donec porttitora entum suscipit 
@@ -48,8 +48,8 @@
                 </li>
                 <li>
                     <article class="card_item">
-                        <div class="card_icon" style="background-image: url(./img/icon/2.jpg)"></div>
-                        <div class="card_text">
+                        <!-- <div class="card_icon" style="background-image: url(./img/icon/2.jpg)"></div> -->
+                        <div class="card_text icon2">
                             <h4>Responsive Web</h4>
                             <p>Proin iaculis purus consequat sem cure 
                                 digni ssim. Donec porttitora entum suscipit 
@@ -59,8 +59,8 @@
                 </li>
                 <li>
                     <article class="card_item">
-                        <div class="card_icon" style="background-image: url(./img/icon/3.jpg)"></div>
-                        <div class="card_text">
+                        <!-- <div class="card_icon" style="background-image: url(./img/icon/3.jpg)"></div> -->
+                        <div class="card_text icon3">
                             <h4>Web Security</h4>
                             <p>Proin iaculis purus consequat sem cure 
                                 digni ssim. Donec porttitora entum suscipit 
