--- a/html-css/module_08_add_task/index.html
+++ b/html-css/module_08_add_task/index.html
@@ -46,6 +46,7 @@
                      (max-width: 1200px) 1100px"
             src="./img/resize-img/beach.jpeg" alt="beach">
         </div>
+        <div>
         <img src="./img/resize-img/beach.jpeg" alt="beach-2"
             sizes="(max-width: 1200px) 60vw, 100vw"
             srcset="./img/resize-img/parrot-480.jpeg 480w,
