module 08 add task -edits

--- a/html-css/module_08_add_task/index.html
+++ b/html-css/module_08_add_task/index.html
@@ -45,13 +45,13 @@
                      (max-width: 768px) 740px,
                      (max-width: 1200px) 1100px"
             src="./img/resize-img/beach.jpeg" alt="beach">
-        </div>
-        <div>
+    </div>
+    <div class="container">
         <img src="./img/resize-img/beach.jpeg" alt="beach-2"
             sizes="(max-width: 1200px) 60vw, 100vw"
             srcset="./img/resize-img/parrot-480.jpeg 480w,
                     ./img/resize-img/palm-768.jpg 768w,
                     ./img/resize-img/yacht-1200.jpg 1200w">
-        </div>
+    </div>
 </body>
 </html>
