--- a/html-css/module_08/index.html
+++ b/html-css/module_08/index.html
@@ -7,6 +7,63 @@
     <link rel="stylesheet" href="./style/main.css">
 </head>
 <body>
-    Hello world!!!!
+    <header>
+      <div class="head_block">
+          <p class="logo">URLAUBSGLÜCK</p>
+          <div class="e_menu">
+              <a href="#" class="log_in">Log in</a>
+              <a href="#" class="sing_up">Sing up</a>
+          </div>
+      </div>  
+      <div class="main_block container">
+          <h2 class="m_b_title">Share your <br> holiday dreams</h2>
+          <p class="m_b_text">And find the perfect partner to fullfill it</p>
+          <input type="button" value="Find your holiday partner" class="m_b_button">
+      </div>
+    </header>
+    <main>
+        <div class="main_body container">
+            <h2 class="main_title">Meet a partner for your best holiday</h2>
+            <ul class="card_list">
+                <li>
+                    <article class="card_item">
+                        <div class="card_avatar_wrapper icon_1">
+                            <img src="./img/partner/1.jpg" width="122" height="122" alt="partner 1" class="card_avatar">
+                        </div>
+                        <h4 class="card_name">Bradley Hunter</h4>
+                        <p class="card_text">Based in Chicago. I love playing tennis and loud music.</p>
+                    </article>
+                </li>
+                <li>
+                    <article class="card_item">
+                        <div class="card_avatar_wrapper icon_2">
+                            <img src="./img/partner/2.jpg" width="122" height="122" alt="partner 2" class="card_avatar">
+                        </div>
+                        <h4 class="card_name">Lucas Marsha</h4>
+                        <p class="card_text">I get my inspiration from nature and objects around me. I have a passion to colours, typography and skateboards.</p>
+                    </article>
+                </li>
+                <li>
+                    <article class="card_item">
+                        <div class="card_avatar_wrapper icon_3">
+                            <img src="./img/partner/3.jpg" width="122" height="122" alt="partner 3" class="card_avatar">
+                        </div>
+                        <h4 class="card_name">Heather Walker</h4>
+                        <p class="card_text">I'm a happy person that loves cats and climbing on mountains.</p>
+                    </article>
+                </li>
+                <li>
+                    <article class="card_item">
+                        <div class="card_avatar_wrapper icon_4">
+                            <img src="./img/partner/4.jpg" width="122" height="122" alt="partner 4" class="card_avatar">
+                        </div>
+                        <h4 class="card_name">Bradley Hunter</h4>
+                        <p class="card_text">Based in Chicago. I love playing tennis and loud music.</p>
+                    </article>
+                </li>
+            </ul>
+            <button class="foot_btn">See other partners</button>
+        </div>
+    </main>
 </body>
 </html>
