--- a/html-css/module_08/index.html
+++ b/html-css/module_08/index.html
@@ -9,11 +9,15 @@
 <body>
     <header>
       <div class="head_block">
-          <p class="logo">URLAUBSGLÜCK</p>
-          <div class="e_menu">
-              <a href="#" class="log_in">Log in</a>
-              <a href="#" class="sing_up">Sing up</a>
-          </div>
+          <a href="#" class="logo">URLAUBSGLÜCK</a>
+          <ul class="e_menu">
+            <li>
+                <a href="#" class="log_in">Log in</a>
+            </li>
+            <li>
+                <a href="#" class="sing_up">Sing up</a>
+            </li>
+          </ul>
       </div>  
       <div class="main_block container">
           <h2 class="m_b_title">Share your <br> holiday dreams</h2>
@@ -30,7 +34,7 @@
                         <div class="card_avatar_wrapper icon_1">
                             <img src="./img/partner/1.jpg" width="122" height="122" alt="partner 1" class="card_avatar">
                         </div>
-                        <h4 class="card_name">Bradley Hunter</h4>
+                        <h3 class="card_name">Bradley Hunter</h3>
                         <p class="card_text">Based in Chicago. I love playing tennis and loud music.</p>
                     </article>
                 </li>
@@ -39,7 +43,7 @@
                         <div class="card_avatar_wrapper icon_2">
                             <img src="./img/partner/2.jpg" width="122" height="122" alt="partner 2" class="card_avatar">
                         </div>
-                        <h4 class="card_name">Lucas Marsha</h4>
+                        <h3 class="card_name">Lucas Marsha</h3>
                         <p class="card_text">I get my inspiration from nature and objects around me. I have a passion to colours, typography and skateboards.</p>
                     </article>
                 </li>
@@ -48,7 +52,7 @@
                         <div class="card_avatar_wrapper icon_3">
                             <img src="./img/partner/3.jpg" width="122" height="122" alt="partner 3" class="card_avatar">
                         </div>
-                        <h4 class="card_name">Heather Walker</h4>
+                        <h3 class="card_name">Heather Walker</h3>
                         <p class="card_text">I'm a happy person that loves cats and climbing on mountains.</p>
                     </article>
                 </li>
@@ -57,7 +61,7 @@
                         <div class="card_avatar_wrapper icon_4">
                             <img src="./img/partner/4.jpg" width="122" height="122" alt="partner 4" class="card_avatar">
                         </div>
-                        <h4 class="card_name">Bradley Hunter</h4>
+                        <h3 class="card_name">Bradley Hunter</h3>
                         <p class="card_text">Based in Chicago. I love playing tennis and loud music.</p>
                     </article>
                 </li>
