module 9 add task

--- a/html-css/module_09_add_task/index.html
+++ b/html-css/module_09_add_task/index.html
@@ -2,11 +2,74 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Модуль 8 дополнительные задания</title>
+    <title>Модуль 9 дополнительные задания</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
-    Hello world
+    <h3 class="title">Задание 1</h3>
+    <div class="container">
+        <div class="row no-gutters">
+            <div class="col-12 col-md-8">
+                <div class="content">Content</div>
+            </div>
+            <div class="col-12 col-md-4">
+                <div class="sidebar">Sidebar</div>
+            </div>
+        </div>
+    </div>
+    <h3 class="title">Задание 2</h3>
+    <div class="container">
+        <div class="row no-gutters">
+            <div class="col-12 col-md-4">
+                <div class="grid_item">Grid Item</div>
+            </div>
+            <div class="col-12 col-md-4">
+                <div class="grid_item-2">Grid Item</div>
+            </div>
+            <div class="col-12 col-md-4">
+                <div class="grid_item">Grid Item</div>
+            </div>
+        </div>
+    </div>
+    <h3 class="title">Задание 3</h3>
+    <div class="container">
+        <div class="row no-gutters">
+            <div class="col-12 col-md-6">
+                <div class="content">Feature</div>
+            </div>
+            <div class="col-12 col-md-6">
+                <div class="sidebar">Feature</div>
+            </div>
+        </div>
+        <div class="row no-gutters">
+            <div class="col-12 col-md-4">
+                <div class="grid_item">Grid Item</div>
+            </div>
+            <div class="col-12 col-md-4">
+                <div class="grid_item-2">Grid Item</div>
+            </div>
+            <div class="col-12 col-md-4">
+                <div class="grid_item">Grid Item</div>
+            </div>
+        </div>
+    </div>
+    <h3 class="title">Задание 4</h3>
+    <div class="container task4">
+        <div id="pic-1">1</div>
+        <div id="pic-2">2</div>
+        <div id="pic-3">3</div>
+        <div id="pic-4">4</div>
+        <div id="pic-5">5</div>
+        <div id="pic-6">6</div>
+    </div>
+    <div class="container task4_1">
+        <div id="task4_1_pic-1">1</div>
+        <div id="task4_1_pic-2">2</div>
+        <div id="task4_1_pic-3">3</div>
+        <div id="task4_1_pic-4">4</div>
+        <div id="task4_1_pic-5">5</div>
+        <div id="task4_1_pic-6">6</div>
+    </div>
 </body>
 </html>
