--- a/html-css/module_09/index.html
+++ b/html-css/module_09/index.html
@@ -8,17 +8,30 @@
 </head>
 <body>
     <header>
-        <div class="head_block">
-            <a href="#" class="logo">URLAUBSGLÜCK</a>
-            <ul class="e_menu">
-            <li>
-                <a href="#" class="log_in">Log in</a>
-            </li>
-            <li>
-                <a href="#" class="sing_up">Sing up</a>
-            </li>
-            </ul>
+        <div class="head_block container">
+            <div class="row justify-content-between align-items-center">
+                <div class="col-12 order-2 col-md-6 order-md-1">
+                    <a href="#" class="logo">URLAUBSGLÜCK</a>
+                </div>
+                <div class="col-12 order-1 col-md-6 order-md-2">
+                    <div>
+                        <ul class="e_menu">
+                            <li>
+                                <a href="#" class="log_in">Log in</a>
+                            </li>
+                            <li>
+                                <a href="#" class="sing_up">Sing up</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </div>
-    </header>  
+        <div class="main_block">
+            <h2 class="m_b_title">Share your <br> holiday dreams</h2>
+            <p class="m_b_text">And find the perfect partner to fullfill it</p>
+            <input type="button" value="Find your holiday partner" class="m_b_button">
+        </div>
+    </header>
 </body>
 </html>
