--- a/html-css/module_09/index.html
+++ b/html-css/module_09/index.html
@@ -33,5 +33,8 @@
             <input type="button" value="Find your holiday partner" class="m_b_button">
         </div>
     </header>
+    <main>
+        
+    </main>
 </body>
 </html>
