module-9 add main

--- a/html-css/module_09/index.html
+++ b/html-css/module_09/index.html
@@ -34,7 +34,53 @@
         </div>
     </header>
     <main>
-        
+        <div class="main_body container">
+            <div class="row">
+                <div class="col">
+                    <h2 class="main_title">Meet a partner for your best holiday</h2>
+                </div>
+            </div>
+            
+            <div class="row justify-content-center">
+                <div class="col-12 col-md-6 col-lg-3">
+                    <article class="card_item">
+                        <div class="card_avatar_wrapper icon_1">
+                            <img src="./img/partner/1.jpg" width="122" height="122" alt="partner 1" class="card_avatar">
+                        </div>
+                        <h3 class="card_name">Bradley Hunter</h3>
+                        <p class="card_text">Based in Chicago. I love playing tennis and loud music.</p>
+                    </article>
+                </div>
+                <div class="col-12 col-md-6 col-lg-3">
+                    <article class="card_item">
+                        <div class="card_avatar_wrapper icon_2">
+                            <img src="./img/partner/2.jpg" width="122" height="122" alt="partner 2" class="card_avatar">
+                        </div>
+                        <h3 class="card_name">Lucas Marsha</h3>
+                        <p class="card_text">I get my inspiration from nature and objects around me. I have a passion to colours, typography and skateboards.</p>
+                    </article>
+                </div>
+                <div class="col-12 col-md-6 col-lg-3">
+                    <article class="card_item">
+                        <div class="card_avatar_wrapper icon_3">
+                            <img src="./img/partner/3.jpg" width="122" height="122" alt="partner 3" class="card_avatar">
+                        </div>
+                        <h3 class="card_name">Heather Walker</h3>
+                        <p class="card_text">I'm a happy person that loves cats and climbing on mountains.</p>
+                    </article>
+                </div>
+                <div class="col-12 col-md-6 col-lg-3">
+                    <article class="card_item">
+                        <div class="card_avatar_wrapper icon_4">
+                            <img src="./img/partner/4.jpg" width="122" height="122" alt="partner 4" class="card_avatar">
+                        </div>
+                        <h3 class="card_name">Bradley Hunter</h3>
+                        <p class="card_text">Based in Chicago. I love playing tennis and loud music.</p>
+                    </article>
+                </div>
+            </div>
+            <button class="foot_btn">See other partners</button>
+        </div>
     </main>
 </body>
 </html>
