module 9 add task to homework

--- a/html-css/module_09/index.html
+++ b/html-css/module_09/index.html
@@ -41,8 +41,8 @@
                 </div>
             </div>
             
-            <div class="row justify-content-center">
-                <div class="col-12 col-md-6 col-lg-3">
+            <div class="row">
+                <div class="col-12 col-md-6 col-lg-3 justify-content-center">
                     <article class="card_item">
                         <div class="card_avatar_wrapper icon_1">
                             <img src="./img/partner/1.jpg" width="122" height="122" alt="partner 1" class="card_avatar">
