--- a/html-css/module_09/index.html
+++ b/html-css/module_09/index.html
@@ -11,19 +11,17 @@
         <div class="head_block container">
             <div class="row justify-content-between align-items-center">
                 <div class="col-12 order-2 col-md-6 order-md-1">
-                    <a href="#" class="logo">URLAUBSGLÜCK</a>
+                    <a href="#" class="logo text-md-left">URLAUBSGLÜCK</a>
                 </div>
                 <div class="col-12 order-1 col-md-6 order-md-2">
-                    <div>
-                        <ul class="e_menu">
-                            <li>
-                                <a href="#" class="log_in">Log in</a>
-                            </li>
-                            <li>
-                                <a href="#" class="sing_up">Sing up</a>
-                            </li>
-                        </ul>
-                    </div>
+                    <ul class="e_menu d-flex justify-content-center justify-content-md-end">
+                        <li>
+                            <a href="#" class="log_in">Log in</a>
+                        </li>
+                        <li>
+                            <a href="#" class="sing_up">Sing up</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -41,8 +39,8 @@
                 </div>
             </div>
             
-            <div class="row">
-                <div class="col-12 col-md-6 col-lg-3 justify-content-center">
+            <ul class="card_list row">
+                <li class="col-12 col-md-6 col-lg-3 justify-content-center">
                     <article class="card_item">
                         <div class="card_avatar_wrapper icon_1">
                             <img src="./img/partner/1.jpg" width="122" height="122" alt="partner 1" class="card_avatar">
@@ -50,8 +48,8 @@
                         <h3 class="card_name">Bradley Hunter</h3>
                         <p class="card_text">Based in Chicago. I love playing tennis and loud music.</p>
                     </article>
-                </div>
-                <div class="col-12 col-md-6 col-lg-3">
+                </li>
+                <li class="col-12 col-md-6 col-lg-3">
                     <article class="card_item">
                         <div class="card_avatar_wrapper icon_2">
                             <img src="./img/partner/2.jpg" width="122" height="122" alt="partner 2" class="card_avatar">
@@ -59,8 +57,8 @@
                         <h3 class="card_name">Lucas Marsha</h3>
                         <p class="card_text">I get my inspiration from nature and objects around me. I have a passion to colours, typography and skateboards.</p>
                     </article>
-                </div>
-                <div class="col-12 col-md-6 col-lg-3">
+                </li>
+                <li class="col-12 col-md-6 col-lg-3">
                     <article class="card_item">
                         <div class="card_avatar_wrapper icon_3">
                             <img src="./img/partner/3.jpg" width="122" height="122" alt="partner 3" class="card_avatar">
@@ -68,8 +66,8 @@
                         <h3 class="card_name">Heather Walker</h3>
                         <p class="card_text">I'm a happy person that loves cats and climbing on mountains.</p>
                     </article>
-                </div>
-                <div class="col-12 col-md-6 col-lg-3">
+                </li>
+                <li class="col-12 col-md-6 col-lg-3">
                     <article class="card_item">
                         <div class="card_avatar_wrapper icon_4">
                             <img src="./img/partner/4.jpg" width="122" height="122" alt="partner 4" class="card_avatar">
@@ -77,8 +75,8 @@
                         <h3 class="card_name">Bradley Hunter</h3>
                         <p class="card_text">Based in Chicago. I love playing tennis and loud music.</p>
                     </article>
-                </div>
-            </div>
+                </li>
+            </ul>
             <button class="foot_btn">See other partners</button>
         </div>
     </main>
