--- a/html-css/module_09/index.html
+++ b/html-css/module_09/index.html
@@ -25,7 +25,7 @@
                 </div>
             </div>
         </div>
-        <div class="main_block">
+        <div class="col-12 main_block">
             <h2 class="m_b_title">Share your <br> holiday dreams</h2>
             <p class="m_b_text">And find the perfect partner to fullfill it</p>
             <input type="button" value="Find your holiday partner" class="m_b_button">
@@ -33,11 +33,7 @@
     </header>
     <main>
         <div class="main_body container">
-            <div class="row">
-                <div class="col">
-                    <h2 class="main_title">Meet a partner for your best holiday</h2>
-                </div>
-            </div>
+            <h2 class="main_title">Meet a partner for your best holiday</h2>
             
             <ul class="card_list row">
                 <li class="col-12 col-md-6 col-lg-3 justify-content-center">
