modul 9 add task edits 2

--- a/html-css/module_10_add_task/index.html
+++ b/html-css/module_10_add_task/index.html
@@ -15,6 +15,9 @@
                             https://placeimg.com/800/400/people 2x">
             <img srcset="https://placeimg.com/200/100/tech" alt="default image">
         </picture>
+
+        <h2 class="title">Задание 2</h2>
+        <div class="box"></div> 
     </div>
 </body>
 </html>
