module 10 add task last edits

--- a/html-css/module_10_add_task/index.html
+++ b/html-css/module_10_add_task/index.html
@@ -18,6 +18,19 @@
 
         <h2 class="title">Задание 2</h2>
         <div class="box"></div> 
-    </div>
+
+        <h2 class="title">Задание 3</h2>
+        <header class="header">
+            <h1 class="logo">
+                <a href="#" class="logo__link">LOGO</a>
+            </h1>
+            <nav class="nav">
+                <a href="#" class="nav__item">link 1</a>
+                <a href="#" class="nav__item">link 2</a>
+                <a href="#" class="nav__item">link 3</a>
+                <a href="#" class="nav__item">link 4</a>
+            </nav>
+        </header>
+    </div>    
 </body>
 </html>
