module 9 add row/col to title/button

--- a/html-css/module_09/index.html
+++ b/html-css/module_09/index.html
@@ -25,16 +25,21 @@
                 </div>
             </div>
         </div>
-        <div class="col-12 main_block">
-            <h2 class="m_b_title">Share your <br> holiday dreams</h2>
-            <p class="m_b_text">And find the perfect partner to fullfill it</p>
-            <input type="button" value="Find your holiday partner" class="m_b_button">
+
+        <div class="row main_block">
+            <h2 class="col-12 m_b_title">Share your <br> holiday dreams</h2>
+            <p class="col-12 m_b_text">And find the perfect partner to fullfill it</p>
+            <input type="col-12 m_b_button" value="Find your holiday partner" class="m_b_button">
         </div>
     </header>
     <main>
         <div class="main_body container">
-            <h2 class="main_title">Meet a partner for your best holiday</h2>
-            
+            <div class="row">
+                <div class="col-12">
+                    <h2 class="main_title">Meet a partner for your best holiday</h2>
+                </div>
+            </div>
+
             <ul class="card_list row">
                 <li class="col-12 col-md-6 col-lg-3 justify-content-center">
                     <article class="card_item">
@@ -73,7 +78,12 @@
                     </article>
                 </li>
             </ul>
-            <button class="foot_btn">See other partners</button>
+
+            <div class="row">
+                <div class="col-12">
+                    <button class="foot_btn">See other partners</button>
+                </div>
+            </div>
         </div>
     </main>
 </body>
